--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,3 +27,9 @@ services:
     App\EventListener\AuthenticationFailureListener:
         tags:
             - { name: kernel.event_listener, event: Symfony\Component\Security\Http\Event\LoginFailureEvent, method: onAuthenticationFailure }
+
+    # API call tracking listener
+    App\EventListener\ApiCallListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 1000 }
+            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse, priority: -1000 }
