--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/asset": "*",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
+        "symfony/expression-language": "*",
         "symfony/flex": "^2",
         "symfony/form": "7.3.*",
         "symfony/framework-bundle": "7.3.*",
