--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,7 +28,7 @@ security:
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
         api:
-            pattern: ^/api
+            pattern: ^/api(?!-docs)
             stateless: true
             provider: app_user_provider
             jwt: ~
@@ -55,6 +55,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api-docs,  roles: PUBLIC_ACCESS }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/admin/login, roles: PUBLIC_ACCESS }
         - { path: ^/admin,     roles: ROLE_ADMIN }
