--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "google/recaptcha": "^1.3",
         "lexik/jwt-authentication-bundle": "^3.1",
         "symfony/asset": "*",
+        "symfony/browser-kit": "7.3.*",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
         "symfony/expression-language": "*",
@@ -81,6 +82,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "*"
+        "phpunit/phpunit": "^9",
+        "symfony/maker-bundle": "*",
+        "symfony/phpunit-bridge": "^7.3"
     }
 }
